[tool.poetry]
name = "gitlab-exec-digest"
version = "0.1.0"
description = "GitLab MR digest tool powered by Streamlit and Gemini"
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "*"
pandas = "*"
altair = "*"
python-gitlab = "*"
google-genai = "*"
python-dotenv = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
